--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <link rel="stylesheet" href="styles/video.css">
   <link rel="stylesheet" href="styles/sidebar.css">
 </head>
-<p>Rami</p>
 <div class="header">
   <div class="left-section">
+    <p>Rami Ahmed</p>
     <img class="hamburger-menu" src="icons/hamburger-menu.svg">
     <img class="youtube-logo" src="icons/youtube-logo.svg">
   </div>
@@ -67,5 +67,6 @@
   </div>
 </div>
 </div>
+
 
 
